--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jasig.ssp.platform</groupId>
     <artifactId>platform-parent</artifactId>
-    <version>1.1.1</version>
+    <version>1.2.0-b1</version>
     <packaging>pom</packaging>
 
     <name>SSP Platform Parent</name>
@@ -25,7 +25,7 @@
         <connection>scm:git:git://github.com/russlittle/SSP-Platform.git</connection>
         <developerConnection>scm:git:git@github.com:russlittle/SSP-Platform.git</developerConnection>
         <url>https://github.com/russlittle/SSP-Platform</url>
-      <tag>ssp-1-1-1</tag>
+      <tag>ssp-1-2-0-b1</tag>
   </scm>
 
     <issueManagement>
@@ -88,9 +88,9 @@
         <!--project-site-path>/uportal/${project.version}</project-site-path-->
         
         <!-- The JDBC Driver used by SSP -->
-        <jdbc.groupId>postgresql</jdbc.groupId>
-        <jdbc.artifactId>postgresql</jdbc.artifactId>
-        <jdbc.version>${postgresql.version}</jdbc.version>
+        <jdbc.groupId>net.sourceforge.jtds</jdbc.groupId> 
+    	<jdbc.artifactId>jtds</jdbc.artifactId> 
+    	<jdbc.version>1.2.4</jdbc.version> 
     
         <!--
          | Environment name and filters file for environment-specific build
